--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:palette-v7:28.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'android.arch.paging:runtime:1.0.1'
 }
